--- a/threejs-template-master/.gitattributes
+++ b/threejs-template-master/.gitattributes
@@ -1,2 +1,3 @@
 resources/assets/mount_fuji_japan.glb filter=lfs diff=lfs merge=lfs -text
 resources/models/kenney_nature_kit/maria_tach_field.glb filter=lfs diff=lfs merge=lfs -text
+resources/models/kenney_nature_kit/tree_animate.glb filter=lfs diff=lfs merge=lfs -text
